--- a/css/student.css
+++ b/css/student.css
@@ -61,7 +61,7 @@ settings
 }
 #main .textList li .num .icon img {
 	width: auto;
-	height: 5.2rem;
+	height: 4.6rem;
 }
 #main .textList li .sml {
 	margin-top: 0.1rem;
@@ -84,7 +84,7 @@ settings
 }
 #main .companyBox .imgList li {
 	margin: 5rem 0 0 0;
-	width: calc(19%);
+	width: calc(18%);
 }
 #main .companyBox .imgList li:nth-child(5n) {
 	margin-right: 0;
@@ -134,6 +134,9 @@ settings
 	align-items: center;
 	gap: 3rem;
 	
+}
+#main .companyBox .imgList li .mark img {
+	width: 3rem;
 }
 #main .companyBox .imgList li .mark span {
 	padding: 0.5rem 1.2rem;
@@ -239,7 +242,7 @@ settings
 #main .results .chartList .chart.taco {
 	width: 100%;
     margin: 3rem auto 4.9rem;
-    max-width: 40.8rem;
+    max-width: 36rem;
 }
 #main .results .chartList .chart.taco img{
 	display: none;
@@ -353,15 +356,19 @@ settings
 }
 #main .results.taco {
 	box-sizing: border-box;
-	padding: 2.2rem 4.5rem 3.2rem;
-	/* width: calc(37% - 2.4rem); */
+	padding: 4.1rem 4.5rem 7.2rem;
 	position: relative;
 	border-radius: 1.4rem;
 	background: #fff;
 	box-shadow: 0 0 1.5rem rgba(0, 0, 0, 0.04);
     text-align: center;
 }
-
+#main .results .headLine05.taco {
+	margin-bottom: 3.2rem;
+	color: #202020;
+	font-size: 2.4rem;
+	font-weight: 700;
+}
 #main .message .messageList {
 	margin: 0 1.6rem;
 	max-width: 35rem;
@@ -404,7 +411,7 @@ settings
 #main .message .chart-profile {
 	width: 100%;
 	margin: 3rem auto 4.9rem;
-    max-width: 40.8rem;
+    max-width: 36rem;
 }
 #main .message .chart-profile img{
 	display: none;
@@ -415,25 +422,28 @@ settings
 
 }
 #main .message .flexD li a {
-	/* display: block; */
-	padding: 1.1rem 2.8rem;
+	padding: 0.9rem 1.3rem 0.9rem 1.8rem;
 	position: relative;
-	border-radius: .8rem;
-	border: solid .15rem #005792;
+	border-radius: .7rem;
+	border: solid .2rem #005792;
 	background: #FFF;
 	font-size: 1.4rem;
 	display: flex;
 	align-items: center;
-	justify-content: space-around;
-	gap: 1.5rem;
 	color: #005792;
+    width: 130px;
+    text-align: center;
+    justify-content: center;
 }
 #main .message .flexD li a:hover {
 	background: #EFF6FB;
-
+}
+#main .message .flexD li a span {
+	flex: 10;
 }
 #main .message .flexD li a img {
 	width: .6rem;
+	flex: 0;
 	
 }
 #main .message .txtList dt {
@@ -654,6 +664,9 @@ settings
 		background-size: 152.4rem auto;
 		background-position: left 66.8% top -21rem;
 	}
+	#main .results.taco {
+		padding: 2.2rem 2.5rem 3.2rem;
+	}
 	#main .pageTitle {
 		margin-bottom: 2.6rem;
 		display: none;
@@ -715,19 +728,36 @@ settings
 		border-radius: 1.1rem;
 	}
 	#main .top-content-box p span {
-		margin-top: 0.8rem;
+		margin-top: 0;
 		display: block;
 		font-weight: 500;
 		font-size: 1.2rem;
 		color: #8F8F8F;
 	}
+	#main .top-content-box .Name {
+		font-size: 2rem;
+		font-weight: bold;
+		color: #202020;
+	}
+	#main .top-content-box p .txt.openSans {
+		font-size: 1.75rem;	
+		margin-left: 1rem;
+		color: #202020;
+		font-weight: bold;
+	}
 	#main .top-content-box .userName {
 		margin-right: 0;
 		font-size: 1.8rem;
 	}
+	#main .top-content-box .userName .userName-tab {
+		display: flex;
+		align-items: center;
+		margin-bottom: 1rem;
+		column-gap: .6rem;
+	}
 	#main .top-content-box .userArrow {
-		margin-top: 1.5rem;
-		width: 1.1rem;
+		margin-top: 0;
+		width: 1.2rem;
 		margin-left: auto;
 	}
 	#main .pageTitle {
@@ -783,7 +813,7 @@ settings
 		display: flex;
 		justify-content: center;
 		align-items: center;
-		font-size: 1rem;
+		font-size: 1.2rem;
 	}
 	#main .companyBox {
 		margin-bottom: 1.8rem;
@@ -791,7 +821,7 @@ settings
 		border-radius: 1rem;
 	}
 	#main .companyBox .comTtlBox01 {
-		margin-bottom: 2rem;
+		margin-bottom: 3.3rem;
 	}
 	#main .companyBox .imgList {
 		margin: -2.8rem 0 0;
@@ -830,20 +860,23 @@ settings
 	}
 	#main .companyBox .imgList li .text01 {
 		margin-bottom: 0.2rem;
-		font-size: 1rem;
+		font-size: 1.25rem;
 	}
 	#main .companyBox .imgList li .text02 {
 		margin-bottom: 0.3rem;
-		font-size: 0.6rem;
+		font-size: 1rem;
 	}
 	#main .companyBox .imgList li .mark {
 		margin-left: 0;
 		margin-top: 1.1rem;
+		gap: 1.3rem;
 	}
-
+	#main .companyBox .imgList li .mark img {
+		width: 2rem;
+	}
 	#main .companyBox .imgList li .mark span {
-		padding: .2rem .9rem;
-		font-size: 0.5rem;
+		padding: .3rem .8rem;
+		font-size: 1rem;
 	}
 	#main .moreLink {
 		right: 2rem;
@@ -871,6 +904,10 @@ settings
 		margin-bottom: 1.3rem;
 		column-gap: 1.3rem;
 	}
+#main .message .comTtlBox02,
+#main .results .comTtlBox02{
+	margin-bottom: 3.3rem;
+}
 	#main .message.profile .results {
 		margin-bottom: 0;
 		padding: 2.2rem 2.5rem 3.6rem;
@@ -915,7 +952,7 @@ settings
 	}
 	#main .results .chartList .chart.taco {
 		width: 100%;
-		margin: 3rem auto 4.9rem;
+		margin: 2.7rem auto 2.7rem;
 		max-width: 22rem;
 	}
 	#main .results .moreLink {
@@ -943,8 +980,12 @@ settings
 		flex: 1;
 	}
 	#main .message.profile  .headLine01 {
-		margin-bottom: 3.2rem;
-		font-size: 2rem;
+		margin-bottom: 2rem;
+		font-size: 1.6rem;
+	}
+	#main .results .headLine05.taco {
+		margin-bottom: 2rem;
+		font-size: 1.6rem;
 	}
 	#main .message.profile .headLine01 .txt01 {
 		margin-right: 0rem;
@@ -996,7 +1037,7 @@ settings
 	}
 	#main .message .chart-profile {
 		width: 100%;
-		margin: 3rem auto 4.9rem;
+		margin: 2.7rem auto 2.7rem;
 		max-width: 22rem;
 	}
 	#main .message .moreLink {
@@ -1008,9 +1049,16 @@ settings
 		border-radius: 1rem;
 	}
 	#main .message .flexD li a {
-		padding: .7rem 1.5rem;
+		padding: .9rem 1.1rem .9rem 1.5rem;
 		font-size: 1.1rem;
-		gap: 1rem;
+		width: 110px;
+		border-radius: .75rem;
+	}
+	#main .message .flexD li a span {
+		flex: 10;
+	}
+	#main .message .flexD li a img {
+		flex: 0;
 	}
 	#main .favorites .headLine01 {
 		margin-bottom: 2.9rem;
@@ -1047,9 +1095,9 @@ settings
 		color: #FFF;
 		position: absolute;
 		top: -12%;
-		right: 75%;
+		right: -5%;
 		z-index: 2;
-		font-size: .4rem;
+		font-size: .9rem;
 	}
 	#main .favorites .moreLink {
 		right: 2.6rem;
@@ -1140,6 +1188,67 @@ settings
 	#main .results .comTtlBox02{
 	margin-bottom: 3.1rem;
 }
+#main .comProfileEditing .userImg {
+	margin-right: 0;
+	width: 50%;
+}
+#main .comProfileEditing .sub01 .photo {
+	flex: 2;
+}
+#main .comProfileEditing .sub01 .photo img {
+	width: 10rem;
+}
+#main .comProfileEditing .User-detail-box {
+	display: flex;
+	flex-direction: wrap;
+	flex: 7;
+}
+#main .comProfileEditing .userImg span {
+	padding-bottom: 100%;
+	border-radius: 1.1rem;
+}
+#main .comProfileEditing p span {
+	margin-top: 0;
+	display: block;
+	font-weight: 500;
+	font-size: 1.2rem;
+	color: #8F8F8F;
+}
+#main .comProfileEditing .Name {
+	font-size: 1.5rem;
+	font-weight: bold;
+	color: #202020;
+	margin-bottom: .3rem;
+}
+#main .comProfileEditing p span {
+	margin-top: 0;
+	display: block;
+	font-weight: 500;
+	font-size: 1.1rem;
+	color: #8F8F8F;
+}
+#main .comProfileEditing p .txt.openSans {
+	font-size: 1.75rem;	
+	margin-left: 1rem;
+	color: #202020;
+	font-weight: bold;
+}
+#main .comProfileEditing .userName {
+	margin-right: 0;
+	font-size: 1.8rem;
+	flex: 5;
+}
+#main .comProfileEditing .userName .userName-tab {
+	display: flex;
+	align-items: center;
+	margin-bottom: 1rem;
+	column-gap: .6rem;
+}
+#main .comProfileEditing .userArrow {
+	margin-top: 0;
+	width: 1.2rem;
+	margin-left: 0;
+}
 	#main .pageTitle {
 		margin-bottom: 2.6rem;
 		display: none;
@@ -1157,7 +1266,7 @@ settings
 		height: auto;
 	}
 	#main .textList li a {
-		padding: 2.9rem 1rem 2rem;
+		padding: 2rem 1rem;
 		border-radius: 1rem;
 		height: 70px;
 
@@ -1184,7 +1293,8 @@ settings
 		justify-content: center;
 		align-items: center;
 		text-align: center;
-		font-size: 1rem;
+		font-size: 1.2rem;
+		height: 30px;
 	}
 	#main .companyBox {
 		margin-bottom: 1.6rem;
@@ -1198,7 +1308,7 @@ settings
 			text-align: right;
 			}
 	#main .companyBox .comTtlBox01 {
-		margin-bottom: 4rem;
+		margin-bottom: 3.1rem;
 	}
 	#main .companyBox .imgList {
 		margin: 0 0 2rem;
@@ -1236,11 +1346,11 @@ settings
 	}
 	#main .companyBox .imgList li .text01 {
 		margin-bottom: 0.2rem;
-		font-size: 1.2rem;
+		font-size: 1.4rem;
 	}
 	#main .companyBox .imgList li .text02 {
 		margin-bottom: 0.1rem;
-		font-size: 1rem;
+		font-size: 1.1rem;
 	}
 	#main .companyBox .imgList li .mark {
 		margin-top: 1rem;
@@ -1248,10 +1358,11 @@ settings
 	}
 	#main .companyBox .imgList li .mark img {
 		margin-left: auto;
+		width: 2rem;
 	}
 	#main .companyBox .imgList li .mark span {
 		padding: .2rem .7rem;
-		font-size: .9rem;
+		font-size: 1.1rem;
 		border: 0.1rem solid #A3A3A3;
 	}
 
@@ -1259,22 +1370,22 @@ settings
 		display: none;
 	}
 	#main .companyBox .imgList .tag.new {
-		padding: .3rem 1.1rem;
+		padding: .3rem 1rem;
 		background: #FF0000;
 		border-radius: 3rem;
 		color: #FFF;
 		position: absolute;
-		top: -7%;
-		right: 50%;
+		top: -13%;
+		right: -8%;
 		z-index: 2;
-		font-size: .5rem;
+		font-size: 1rem;
 	}
 	#main .moreLink {
 		position: static;
 		text-align: center;
 	}
 	#main .moreLink a {
-		font-size: 1rem;
+		font-size: 1.1rem;
 	}
 	#main .secBox {
 		margin-bottom: 1.3rem;
@@ -1285,6 +1396,12 @@ settings
 		padding: 3.3rem 4.6rem 3.2rem;
 		width: auto;
 		border-radius: 1rem;
+	}
+	#main .results .headLine05.taco {
+		margin-bottom: 1.3rem;
+		color: #202020;
+		font-size: 1.6rem;
+		font-weight: 700;
 	}
 	#main .results .chartList .chart.taco {
 		width: 100%;
@@ -1342,7 +1459,7 @@ settings
 	}
 	#main .message {
 		margin-bottom: 1.3rem;
-		padding: 3.3rem 2.6rem 3.1rem;
+		padding: 3.3rem 2rem 3.1rem;
 		width: auto;
 		border-radius: 1rem;
 	}
@@ -1352,7 +1469,7 @@ settings
 		max-width: 18rem;
 	}
 	#main .message .headLine01 {
-		margin-bottom: 2.3rem;
+		margin-bottom: 1.3rem;
 	}
 	#main .message .messageList {
 		margin: 0 0 2rem;
@@ -1398,9 +1515,19 @@ settings
 		background-size: 0.8rem auto;
 	}
 	#main .message .flexD li a {
-		padding: .7rem 1.5rem;
+		display: flex;
+		padding: .7rem .9rem .7rem 1.1rem;
 		font-size: 1.1rem;
-		gap: 1rem;
+		width: 118px;
+		text-align: center;
+		justify-content: center;
+		border: solid .15rem #005792;
+	}
+	#main .message .flexD li a span {
+		flex: 13;
+	}
+	#main .message .flexD li a img {
+		flex: 0;
 	}
 	#main .favorites {
 		margin-bottom: 1.3rem;
