--- a/css/student.css
+++ b/css/student.css
@@ -42,21 +42,45 @@ settings
 	margin-right: 0;
 }
 #main .textList li a {
-	padding: 4.2rem 10rem 4.5rem 5rem;
+	padding: 4.2rem 4rem 4.5rem 4rem;
 	display: block;
 	position: relative;
 	border-radius: 1.4rem;
 	background: #fff;
 	box-shadow: 0 0 1.5rem rgba(0, 0, 0, 0.04);
 }
+main .top-content-detail .icon img {
+ width: 5rem;
+ height: 5rem;
+}
+main .top-content-detail .icon-resp {
+	display: none;
+}
+#main  .top-content .num{
+display: flex;
+align-items: left;
+flex-direction: column;
+justify-content: center;
+column-gap: 4rem;
+}
+ main .top-content-detail {
+	display: flex;
+	align-items: center;
+	column-gap: 3rem;
+ }
+#main .top-content  .top-content-pc {
+display: flex;
+justify-content: flex-end;
+}
 #main .textList li .num {
+
 	font-size: 3.8rem;
 	color: #202020;
 }
 #main .textList li .num .icon {
 	position: absolute;
 	top: 50%;
-	right: 5.8rem;
+	left: 4rem;
 	transform: translateY(-50%);
 }
 #main .textList li .num .icon img {
@@ -164,7 +188,8 @@ settings
 	display: inline-block;
 	font-size: 1.5rem;
 	font-weight: 500;
-	color: #A5A5A5;
+	color: #005792;
+	text-decoration: underline;
 }
 #main .moreLink.down {
 	display: none;
@@ -366,7 +391,7 @@ settings
 #main .results .headLine05.taco {
 	margin-bottom: 3.2rem;
 	color: #202020;
-	font-size: 2.4rem;
+	font-size: 1.8rem;
 	font-weight: 700;
 }
 #main .message .messageList {
@@ -768,11 +793,9 @@ settings
 		justify-content: space-between;
 	}
 	#main .top-content-detail {
-		position:absolute;
-		top:50%;
-		left:50%;
-		transform:translate(-50%,-50%);
-		width:100%;
+	display: flex;
+	align-items: center;
+	justify-content: center;
 	}
 	#main .textList.top-content li {
 		margin: 0;
@@ -793,6 +816,19 @@ settings
 		border-radius: 1rem;
 	}
 
+	#main .top-content-detail .icon {
+		display: none;
+	}
+	#main .top-content-detail .icon-resp {
+		display: block;
+		width: 2.5rem;
+	}
+	#main .top-content-detail .top-content-resp {
+		display: flex;
+		align-items: center;
+		justify-content: center;
+		column-gap: 1rem;
+	}
 	#main .textList li .num {
 		display: flex;
 		justify-content: center;
@@ -886,6 +922,7 @@ settings
 	display: none;
 	}
 	#main .companyBox .moreLink.down {
+		display: block;
 		margin-top: 2rem;
 		text-align: right;
 		}
@@ -980,11 +1017,11 @@ settings
 		flex: 1;
 	}
 	#main .message.profile  .headLine01 {
-		margin-bottom: 2rem;
+		margin-bottom: .5rem;
 		font-size: 1.6rem;
 	}
 	#main .results .headLine05.taco {
-		margin-bottom: 2rem;
+		margin-bottom: .5rem;
 		font-size: 1.6rem;
 	}
 	#main .message.profile .headLine01 .txt01 {
@@ -1271,6 +1308,24 @@ settings
 		height: 70px;
 
 	}
+	main .top-content-detail {
+		display: flex;
+		align-items: center;
+		justify-content: center;
+	}
+	#main .top-content-detail .icon {
+		display: none;
+	}
+	#main .top-content-detail .icon-resp {
+		display: block;
+		width: 2.2rem;
+	}
+	#main .top-content-detail .top-content-resp {
+		display: flex;
+		align-items: center;
+		justify-content: center;
+		column-gap: 1rem;
+	}
 	#main .textList li .num {
 		display: flex;
 		justify-content: center;
@@ -1305,6 +1360,7 @@ settings
 		display: none;
 		}
 		#main .companyBox .moreLink.down {
+			display: block;
 			text-align: right;
 			}
 	#main .companyBox .comTtlBox01 {
