--- a/css/login.css
+++ b/css/login.css
@@ -1,4 +1,26 @@
-@charset "UTF-8";
+@charset "utf-8";
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400;500;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@600;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Cairo:wght@600&display=swap');
+/*------------------------------------------------------------
+	デフォルトスタイル
+------------------------------------------------------------*/
+html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, font, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td {
+	margin: 0;
+	padding: 0;
+	background: transparent;
+	border: 0;
+	outline: 0;
+	font-size: 1em;
+}
+
+*:focus {
+	outline: none;
+  }
+  a {
+	-webkit-tap-highlight-color:rgba(0,0,0,0);
+	cursor:pointer;
+  }
 body {
   background:#CED3D8 url('../image/Bg-image.svg')no-repeat ;
   background-attachment: fixed;
@@ -6,9 +28,11 @@ body {
   font-family: 'Noto Sans JP', sans-serif;
   /* スマホ横向き時のフォントサイズ */
   -webkit-text-size-adjust: 100%;
-	text-size-adjust: 100%;
+	text-size-adjust: none;
   padding: 0;
   margin: 0;
+  font-weight: 700;
+  color: #343434;
 }
 @media screen and (min-width: 600px) {
   body {
@@ -24,13 +48,7 @@ body {
     background-size: cover;
    }
 }
-*:focus {
-  outline: none;
-}
-a {
-  -webkit-tap-highlight-color:rgba(0,0,0,0);
-  cursor:pointer;
-}
+
 a,button {
   -webkit-tap-highlight-color: transparent; /* 強調をなくす */
 }
@@ -83,10 +101,14 @@ input, button, textarea, select {
 
 /* content,login-box */
 
-@media screen and (min-width: 320px) {
+
+
+/* 入力フォーム */
+
+  /* 全体のレイアウト　スマホ */
   .content {
     max-width: 100%;
-    padding: 0 2.6rem;
+    padding: 0 1.6rem;
   }
   .logoBox {
     text-align: center;
@@ -103,71 +125,29 @@ input, button, textarea, select {
   background: #FFF;
   border-radius: 1.5rem;
   box-shadow: 0 0 15px rgba(0, 0, 0, 0.04);
-  width: 19em;
-}
-}
-
-
-@media screen and (min-width: 600px) {
-  .login-box {
-    width: 24rem;
-    padding: 3.1rem 2.3rem;
-    margin-top: 5rem;
-  }
-  .logo.center {
-   margin-top: 4.5rem;
-    width:18rem;
-  }
-  .login-title {
-    font-size: 1.1rem;
-    margin-bottom: 2.2rem;
-  }
+  width: 24em;
 }
 
-@media screen and (min-width: 1024px) {
-  .login-box {
-    width: 21rem;
-    padding: 2.9rem 1.9rem;
-    margin-top: 3rem;
-  }
-  .logo.center {
-    margin-top: 3rem;
-
-    width:17rem;
-  }
-  .login-title {
-    font-size: 1rem;
-  }
-
-  .login-container {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%,-50%);
-  }
+input[type=email],
+input[type=password],
+input[type=text],
+input[type=tel]  {
+  width: 100%;
+  height: 2.8rem;
+  line-height: 2.8rem;
+  border-radius: .6rem;
+  padding: 0 .7rem;
+  background-color: #F5F6F7;
+  margin: .6rem 0 0;
+  font-size: .8rem;
 }
-
-/* 入力フォーム */
-@media screen and (min-width: 320px) {
-
-  input[type=email],
-    input[type=text],  
-  input[type=password] {
-    width: 100%;
-    height: 2.2rem;
-    line-height: 2.2rem;
-    border-radius: .6rem;
-    padding: 0 .7rem;
-    background-color: #F5F6F7;
-    margin: .6rem 0 0;
-    font-size: .45rem;
-  }
-  input[type=email]::placeholder,
-  input[type=text]::placeholder,
-  input[type=password]::placeholder {
-    font-size: .45rem;
-    color: #A3A3A3;
-  }
+input[type=email]::placeholder,
+input[type=text]::placeholder,
+input[type=password]::placeholder,
+input[type=tel]::placeholder {
+  font-size: .8rem;
+  color: #A3A3A3;
+}
 
   .err-msg-email,
   .err-msg-pass,
@@ -175,15 +155,14 @@ input, button, textarea, select {
   .err-msg-birthday
    {
     color: #FF0000;
-    font-size: .4rem;
+    font-size: .65rem;
     padding-left: .3rem;
-    margin-top: .3rem;
+    margin-top: .4rem;
 }
 
   dt {
-    font-size: .2rem;
-    color: #434343;
-    font-weight: bold;
+    font-size: .75rem;
+    line-height: 1.5;
   }
   dt:nth-of-type(2) {
     margin-top: 1.2rem;
@@ -198,7 +177,7 @@ input, button, textarea, select {
   }
   .password .eye {
     position: absolute;
-    top: .9rem;
+    top: 1.2rem;
     right: 0;
     z-index: 2;
     padding: 0 1rem;
@@ -217,53 +196,61 @@ input, button, textarea, select {
     justify-content: space-between;
     margin-top: .6rem;
   }
-
+  .loginDetail label {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+  }
   label {
     display: flex;
     align-items: center;
   }
   
   label input[type="checkbox"] {
-    width: .5rem;
-    height: .5rem;
-    border: solid .8px;
-    color: #202020;
-    margin-left: .3rem;
-    margin-right: .2rem;
+    width: 1rem;
+    height: 1rem;
+    border: solid 1px #343434;
+    color: #343434;
+    margin-left: .2rem;
+    margin-right: .3rem;
     cursor: pointer;
+    -webkit-tap-highlight-color:rgba(0,0,0,0);
   }
   label input[type="checkbox"] ~ span {
-    font-size: .3rem;
-    color: #202020;
+    margin-left: .1rem;
+    font-size: .7rem;
+    font-weight: 500;
+    color: #343434;
   }
   label input[type="checkbox"]:checked {
-    background-image: url('../image/check_img04.png');
+    background-image: url('/image/common/checkMark.svg');
     background-repeat: no-repeat;
-    background-size: .47rem;
-    margin-left: .3rem;
+    background-size: 80%;
+    background-position: 50% 60%;
   }
 
  .link {
-    font-size: .3rem;
-    color: #343434;
-    border-bottom: solid 1px #343434;
+  font-size: .7rem;
+  color: #A5A5A5;
+  border-bottom: solid 1px #A5A5A5;
+  font-weight: 500;
   }
   .link.forgetPass {
     margin-right: .3rem;
   }
-  .submit {
+  .login-signUp {
     margin-top: 2.5rem;
   }
 
-  .submit li input {
+  .login-signUp li input {
     width: 100%;
-    border-radius: .6rem;
-    height: 2.2rem;
-    font-size: .5rem;
+    border-radius: .7rem;
+    height: 2.4rem;
+    font-size: .7rem;
     font-weight: bold;
     cursor: pointer;
   }
-  .submit li:nth-of-type(2) {
+  .login-signUp li:nth-of-type(2) {
     margin-top: .9rem;
   }
  .bgGradation input {
@@ -278,13 +265,27 @@ input, button, textarea, select {
     border:solid 1.2px #005792;
     background: #FFF;
   }
-}
 
 @media screen and (min-width: 600px) {
+/*全体のレイアウト */
+  .login-box {
+    width: 24rem;
+    padding: 3.1rem 2.3rem;
+    margin-top: 5rem;
+  }
+  .logo.center {
+   margin-top: 4.5rem;
+    width:18rem;
+  }
+  .login-title {
+    font-size: 1.1rem;
+    margin-bottom: 2.2rem;
+  }
+
   input[type=email],
   input[type=text],  
   input[type=password],
-  input[type=phone-number]  {
+  input[type=tel]  {
     width: 100%;
     height: 2.4rem;
     line-height: 2.4rem;
@@ -297,22 +298,22 @@ input, button, textarea, select {
   input[type=email]::placeholder,
   input[type=text]::placeholder,
   input[type=password]::placeholder,
-  input[type=phone-number]::placeholder {
+  input[type=tel]::placeholder {
     font-size: .7rem;
     color: #A3A3A3;
   }
 
-  .submit {
+  .login-signUp {
     margin-top: 3rem;
   }
-  .submit li input {
+  .login-signUp li input {
     width: 100%;
     border-radius: .6rem;
     height: 2.4rem;
     font-size: .7rem;
     font-weight: bold;
   }
-  .submit li:nth-of-type(2) {
+  .login-signUp li:nth-of-type(2) {
     margin-top: 1rem;
   }
   dt {
@@ -341,10 +342,38 @@ input, button, textarea, select {
 }
 
 @media screen and (min-width: 1024px) {
+/* 全体のレイアウト　PC */
+    .login-box {
+      width: 21rem;
+      padding: 2.9rem 1.9rem;
+      margin-top: 3rem;
+    }
+    .logo.center {
+      margin-top: 3rem;
+  
+      width:17rem;
+    }
+    .login-title {
+      font-size: 1rem;
+    }
+  
+    .login-container {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%,-50%);
+    }
+
+  .loginDetail label {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+  }
+
   input[type=email],  
   input[type=text],  
   input[type=password],
-  input[type=phone-number]  {
+  input[type=tel]  {
     width: 100%;
     height: 2.4rem;
     line-height: 2.4rem;
@@ -352,23 +381,34 @@ input, button, textarea, select {
     padding: 0 1.1rem;
     background-color: #F5F6F7;
     margin: .7rem 0 0;
-    font-size: .3rem;
+    font-size: .65rem;
   }
   input[type=email]::placeholder,
   input[type=text]::placeholder,  
   input[type=password]::placeholder,
-  input[type=phone-number]::placeholder {
-    font-size: .3rem;
+  input[type=tel]::placeholder {
+    font-size: .65rem;
     color: #A3A3A3;
   }
-  .submit {
+
+  .err-msg-email,
+  .err-msg-pass,
+  .err-msg-tel,
+  .err-msg-birthday
+   {
+    color: #FF0000;
+    font-size: .6rem;
+    padding-left: .3rem;
+    margin-top: .3rem;
+}
+  .login-signUp {
     margin-top: 3rem;
   }
-  .submit li input {
+  .login-signUp li input {
     width: 100%;
     border-radius: .5rem;
     height: 2.4rem;
-    font-size: .3rem;
+    font-size: .7rem;
 font-weight: bold;
   }
 
@@ -385,22 +425,45 @@ font-weight: bold;
     transition: all .3s ease-out;
   }
   .bgWhite input:hover {
-    background: #EFF6FB;
+    background: #DDEBF5;
   }
-  .submit li:nth-of-type(2) {
+  .login-signUp li:nth-of-type(2) {
     margin-top: 1rem;
   }
   dt {
-    font-size: .7rem;
+    font-size: .65rem;
   }
+  label input[type="checkbox"] {
+    width: .8rem;
+    height: .8rem;
+    border: solid 1px #202020;
+    color: #202020;
+    border-radius: .2rem;
+    margin-left: .2rem;
+    margin-right: .3rem;
+    cursor: pointer;
+    -webkit-tap-highlight-color:rgba(0,0,0,0);
+  }
+  label input[type="checkbox"]:checked {
+    background-image: url('/image/common/checkMark.svg');
+    background-repeat: no-repeat;
+    background-size: 80%;
+    background-position: 50% 60%;
+  }
+  
+
   label input[type="checkbox"] ~ span {
-    font-size: .3rem;
+    margin-left: .1rem;
+    font-size: .6rem;
+    font-weight: 500;
+    color: #202020;
   }
   .link {
-    font-size: .3rem;
+    font-size: .6rem;
   }
   .link:hover {
     color: #005792;
+    border-bottom: solid 1px #005792;
   }
   .Back-link {
     margin-top: 1.8rem;
