--- a/css/sign-up.css
+++ b/css/sign-up.css
@@ -1,4 +1,26 @@
-@charset "UTF-8";
+@charset "utf-8";
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400;500;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@600;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Cairo:wght@600&display=swap');
+/*------------------------------------------------------------
+	デフォルトスタイル
+------------------------------------------------------------*/
+html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, font, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td {
+	margin: 0;
+	padding: 0;
+	background: transparent;
+	border: 0;
+	outline: 0;
+	font-size: 1em;
+}
+
+*:focus {
+	outline: none;
+  }
+  a {
+	-webkit-tap-highlight-color:rgba(0,0,0,0);
+	cursor:pointer;
+  }
 body {
   background:#CED3D8 url('../image/Bg-image.svg')no-repeat ;
   background-attachment: fixed;
@@ -6,9 +28,11 @@ body {
   font-family: 'Noto Sans JP', sans-serif;
   /* スマホ横向き時のフォントサイズ */
   -webkit-text-size-adjust: 100%;
-	text-size-adjust: 100%;
   margin: 0;
   padding: 0;
+  font-weight: 700;
+  text-size-adjust: none;
+  color: #343434;
 }
 @media screen and (min-width: 600px) {
   body {
@@ -24,13 +48,7 @@ body {
     background-size: cover;
    }
 }
-*:focus {
-  outline: none;
-}
-a {
-  -webkit-tap-highlight-color:rgba(0,0,0,0);
-  cursor:pointer;
-}
+
 a,button {
   -webkit-tap-highlight-color: transparent; /* 強調をなくす */
 }
@@ -90,10 +108,10 @@ select::-ms-expand {
 }
 
 
-@media screen and (min-width: 320px) {
+
   .content {
     max-width: 100%;
-    padding: 0 2.6rem;
+    padding: 0 1.6rem;
   }
   .logoBox {
     text-align: center;
@@ -110,7 +128,7 @@ select::-ms-expand {
   background: #FFF;
   border-radius: 1.5rem;
   box-shadow: 0 0 15px rgba(0, 0, 0, 0.04);
-  width: 19em;
+  width: 24em;
 }
 .login-title {
   font-size: .9rem;
@@ -119,13 +137,199 @@ select::-ms-expand {
   margin-bottom: 1.6rem;
 }
 .login-text {
-  font-size: .5rem;
-  color: #434343;
-  font-weight: 600;
+  font-size: .7rem;
+  line-height: 1.5;
+  color: #202020;
   text-align: center;
 }
+
+
+/* 入力フォーム */
+
+  input[type=email],
+  input[type=password],
+  input[type=text],
+  input[type=tel]  {
+    width: 100%;
+    height: 2.8rem;
+    line-height: 2.8rem;
+    border-radius: .6rem;
+    padding: 0 .7rem;
+    background-color: #F5F6F7;
+    margin: .6rem 0 0;
+    font-size: .8rem;
+  }
+  input[type=email]::placeholder,
+  input[type=text]::placeholder,
+  input[type=password]::placeholder,
+  input[type=tel]::placeholder {
+    font-size: .8rem;
+    color: #A3A3A3;
+  }
+  .err-msg-email,
+  .err-msg-pass,
+  .err-msg-tel,
+  .err-msg-birthday
+   {
+    color: #FF0000;
+    font-size: .65rem;
+    padding-left: .3rem;
+    margin-top: .4rem;
 }
+  dt {
+    font-size: .75rem;
+  }
+  dt:not(:first-child) {
+    margin-top: 1.2rem;
+  }
+
+  .password {
+    display: flex;
+  justify-content: center;
+    align-items: center;
+    position: relative;
+    height: 100%;
+  }
+  .password .eye {
+    position: absolute;
+    top: 1.1rem;
+    right: 0;
+    z-index: 2;
+    padding: 0 1rem;
+  }
+  input[type=password] .eye  {
+    width: .9rem;
+   display: flex;
+   justify-content: center;
+   align-items: center;
+
+  }
+
+  .loginDetail {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin-top: .6rem;
+  }
+  .loginDetail label {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+  }
+
+  label {
+    display: flex;
+    align-items: center;
+  }
+  
+  label input[type="checkbox"] {
+    width: 1rem;
+    height: 1rem;
+    border: solid 1px #343434;
+    color: #343434;
+    margin-left: .2rem;
+    margin-right: .3rem;
+    cursor: pointer;
+    -webkit-tap-highlight-color:rgba(0,0,0,0);
+  }
+  label input[type="checkbox"] ~ span {
+    margin-left: .1rem;
+    font-size: .7rem;
+    font-weight: 500;
+    color: #343434;
+  }
+  label input[type="checkbox"]:checked {
+    background-image: url('/image/common/checkMark.svg');
+    background-repeat: no-repeat;
+    background-size: 80%;
+    background-position: 50% 60%;
+
+  }
+  
+
+  .privacy-link span {
+    font-size: .7rem;
+    color: #202020;
+    font-weight: 500;
+  }
+
+ .link {
+    font-size: .7rem;
+    color: #A5A5A5;
+    border-bottom: solid 1px #A5A5A5;
+    font-weight: 500;
+  }
+  .submit {
+    margin-top: 2.5rem;
+  }
+.Back-link {
+margin-top: 1rem;
+text-align: center;
+}
+  .submit.noField {
+    margin-top: 2.5rem;
+  }
+
+  .submit li input {
+    width: 100%;
+    border-radius: .6rem;
+    height: 2.8rem;
+    font-size: .8rem;
+ font-weight: bold;
+    cursor: pointer;
+  }
+  .submit li:nth-of-type(2) {
+    margin-top: .9rem;
+  }
+ .bgGradation input {
+  background: linear-gradient(70deg, #005792 0%, #91C0E0 50%, #005792 100% , #91C0E0 200%);
+  background-position: 0% 50%;
+  background-size: 200% auto;
+  color: #FFF;
+  border: none;
+}
+
+    /* 生年月日の入力フォーム */
+
+.birthDay{
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+}
+.birthDay select {
+  border-radius: 0.6rem;
+  padding: 0 0.9rem;
+  background-color: #F5F6F7;
+  color: #343434;
+  margin: 0.6rem 0 0;
+  font-size: .8rem;
+  height: 2.8rem;
+  line-height: 2.8rem;
+  border: none;
+  width: 100%;
+  cursor: pointer;
+
+}
+.select-birthDay {
+  position: relative;
+  width: calc((100% / 3) - 0.5rem);
+}
+.select-down {
+color: #A3A3A3;
+  position: absolute;
+  top: 50%;
+  right: 11%;
+}
+
+.birthDay select {
+background-image: url('../image/common/select-down-icon-gray.svg');
+background-size: .4rem .4rem ;
+background-position: 90% 55%;
+background-repeat: no-repeat;
+}
+
 @media screen and (min-width: 600px) {
+  /* ロゴのレイアウト */
   .login-box {
     width: 24rem;
     padding: 3.1rem 2.3rem;
@@ -144,175 +348,12 @@ select::-ms-expand {
     font-size: .75rem;
     line-height: 1.5;
   }
-}
 
-@media screen and (min-width: 1024px) {
-  .login-box {
-    width: 21rem;
-    padding: 2.9rem 1.9rem;
-    margin-top: 3rem;
-  }
-  .logo.center {
-    margin-top: 3rem;
-    width:17rem;
-  }
-  .login-title {
-    font-size: 1rem;
-  }
-  
-  .login-text {
-    font-size: .7rem;
-    line-height: 1.5;
-  }
-  .login-container {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%,-50%);
-  }
-}
-/* 入力フォーム */
-@media screen and (min-width: 320px) {
-
-  input[type=email],
-  input[type=password],
-  input[type=text],
-  input[type=phone-number]  {
-    width: 100%;
-    height: 2.2rem;
-    line-height: 2.2rem;
-    border-radius: .6rem;
-    padding: 0 .7rem;
-    background-color: #F5F6F7;
-    margin: .6rem 0 0;
-    font-size: .45rem;
-  }
-  input[type=email]::placeholder,
-  input[type=text]::placeholder,
-  input[type=password]::placeholder,
-  input[type=phone-number]::placeholder {
-    font-size: .45rem;
-    color: #A3A3A3;
-  }
-  .err-msg-email,
-  .err-msg-pass,
-  .err-msg-tel,
-  .err-msg-birthday
-   {
-    color: #FF0000;
-    font-size: .4rem;
-    padding-left: .3rem;
-    margin-top: .3rem;
-}
-  dt {
-    font-size: .2rem;
-    color: #434343;
-    font-weight: bold;
-  }
-  dt:not(:first-child) {
-    margin-top: 1.2rem;
-  }
-
-  .password {
-    display: flex;
-  justify-content: center;
-    align-items: center;
-    position: relative;
-    height: 100%;
-  }
-  .password .eye {
-    position: absolute;
-    top: .9rem;
-    right: 0;
-    z-index: 2;
-    padding: 0 1rem;
-  }
-  input[type=password] .eye  {
-   width: .9rem;
-   display: flex;
-   justify-content: center;
-   align-items: center;
-
-  }
-
-  .loginDetail {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    margin-top: .6rem;
-  }
-
-  label {
-    display: flex;
-    align-items: center;
-  }
-  
-  label input[type="checkbox"] {
-    width: .5rem;
-    height: .5rem;
-    border: solid .8px;
-    color: #202020;
-    margin-left: .5rem;
-    margin-right: .2rem;
-    cursor: pointer;
-  }
-  label input[type="checkbox"] ~ span {
-    font-size: .3rem;
-    color: #202020;
-  }
-  label input[type="checkbox"]:checked {
-    background-image: url('../image/check_img04.png');
-    background-repeat: no-repeat;
-    background-size: .47rem;
-    margin-left: .3rem;
-  }
-
-  .privacy-link span {
-    font-size: .3rem;
-  }
-
- .link {
-    font-size: .3rem;
-    color: #343434;
-    border-bottom: solid 1px #343434;
-  }
-  .submit {
-    margin-top: 2.5rem;
-  }
-.Back-link {
-margin-top: 1rem;
-text-align: center;
-}
-  .submit.noField {
-    margin-top: 2.5rem;
-  }
-
-  .submit li input {
-    width: 100%;
-    border-radius: .6rem;
-    height: 2.2rem;
-    font-size: .5rem;
- font-weight: bold;
-    cursor: pointer;
-  }
-  .submit li:nth-of-type(2) {
-    margin-top: .9rem;
-  }
- .bgGradation input {
-  background: linear-gradient(70deg, #005792 0%, #91C0E0 50%, #005792 100% , #91C0E0 200%);
-  background-position: 0% 50%;
-  background-size: 200% auto;
-  color: #FFF;
-  border: none;
-}
-
-}
-@media screen and (min-width: 600px) {
-
+  /* フォームのレイアウト前半 */
     input[type=email],
     input[type=text],
     input[type=password],
-    input[type=phone-number]  {
+    input[type=tel]  {
       width: 100%;
       height: 2.4rem;
       line-height: 2.4rem;
@@ -325,7 +366,7 @@ text-align: center;
     input[type=email]::placeholder,
     input[type=text]::placeholder,
     input[type=password]::placeholder,
-    input[type=phone-number]::placeholder {
+    input[type=tel]::placeholder {
       font-size: .7rem;
       color: #A3A3A3;
     }
@@ -360,8 +401,30 @@ text-align: center;
     padding: 0 1rem;
     cursor: pointer;
   }
+  label input[type="checkbox"] {
+    width: .8rem;
+    height: .8rem;
+    border: solid 1px #202020;
+    color: #202020;
+    border-radius: .2rem;
+    margin-left: .2rem;
+    margin-right: .3rem;
+    cursor: pointer;
+    -webkit-tap-highlight-color:rgba(0,0,0,0);
+  }
+  label input[type="checkbox"]:checked {
+    background-image: url('/image/common/checkMark.svg');
+    background-repeat: no-repeat;
+    background-size: 80%;
+    background-position: 50% 60%;
+  }
+  
+
   label input[type="checkbox"] ~ span {
-    font-size: .7rem;
+    margin-left: .1rem;
+    font-size: .6rem;
+    font-weight: 500;
+    color: #202020;
   }
   .link {
     font-size: .7rem;
@@ -370,13 +433,51 @@ text-align: center;
     margin-top: 1.8rem;
     text-align: center;
     }
+
+    /* 生年月日の入力フォーム */
+    .birthDay select {
+      padding: 0 1.1rem;
+      margin: .7rem 0 0;
+      font-size: .7rem;
+      height: 2.4rem;
+      line-height: 2.4rem;
+    }
+    .birthDay select {
+      background-size: .4rem .4rem ;
+      background-position: 90% 55%;
+      }
 }
 
 @media screen and (min-width: 1024px) {
+  /* ロゴのレイアウト */
+  .login-box {
+    width: 21rem;
+    padding: 2.9rem 1.9rem;
+    margin-top: 3rem;
+  }
+  .logo.center {
+    margin-top: 3rem;
+    width:17rem;
+  }
+  .login-title {
+    font-size: 1rem;
+  }
+  
+  .login-text {
+    font-size: .7rem;
+    line-height: 1.5;
+  }
+  .login-container {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+  }
+/* フォームレイアウト前半 */
   input[type=email],
   input[type=password],
   input[type=text],
-  input[type=phone-number]  {
+  input[type=tel]  {
     width: 100%;
     height: 2.4rem;
     line-height: 2.4rem;
@@ -384,15 +485,25 @@ text-align: center;
     padding: 0 1.1rem;
     background-color: #F5F6F7;
     margin: .7rem 0 0;
-    font-size: .3rem;
+    font-size: .65rem;
   }
   input[type=email]::placeholder,
   input[type=text]::placeholder,
   input[type=password]::placeholder,
-  input[type=phone-number]::placeholder {
-    font-size: .3rem;
+  input[type=tel]::placeholder {
+    font-size: .65rem;
     color: #A3A3A3;
   }
+  .err-msg-email,
+  .err-msg-pass,
+  .err-msg-tel,
+  .err-msg-birthday
+   {
+    color: #FF0000;
+    font-size: .6rem;
+    padding-left: .3rem;
+    margin-top: .3rem;
+}
   .submit {
     margin-top: 3rem;
   }
@@ -400,7 +511,7 @@ text-align: center;
     width: 100%;
     border-radius: .5rem;
     height: 2.4rem;
-    font-size: .3rem;
+    font-size: .7rem;
  font-weight: bold;
   }
   .submit li:nth-of-type(2) {
@@ -410,16 +521,18 @@ text-align: center;
     margin-top:3rem;
   }
   dt {
-    font-size: .7rem;
+    font-size: .65rem;
+    line-height: 1.5;
   }
   label input[type="checkbox"] ~ span {
-    font-size: .7rem;
+    font-size: .6rem;
   }
   .link {
-    font-size: .3rem;
+    font-size: .6rem;
   }
   .link:hover {
     color: #005792;
+    border-bottom: solid 1px #005792;
   }
   .bgGradation input {
     background: linear-gradient(70deg, #005792 0%, #91C0E0 50%, #005792 100% , #91C0E0 200%);
@@ -441,60 +554,14 @@ text-align: center;
       z-index: 2;
       padding: 0 1rem;
     }
-}
-
-/* 生年月日の選択 */
-@media screen and (min-width: 320px) {
-  .birthDay{
-    display: flex;
-    justify-content: space-between;
-    width: 100%;
-  }
-  .birthDay select {
-    border-radius: 0.6rem;
-    padding: 0 0.9rem;
-    background-color: #F5F6F7;
-    color: #343434;
-    margin: 0.6rem 0 0;
-    font-size: .45rem;
-    height: 2rem;
-    line-height: 2rem;
-    border: none;
-    width: 100%;
-    cursor: pointer;
-
-  }
-  .select-birthDay {
-    position: relative;
-    width: calc((100% / 3) - 0.5rem);
-  }
-.select-down {
-  color: #A3A3A3;
-    position: absolute;
-    top: 50%;
-    right: 11%;
-}
-
-.birthDay select {
-  background-image: url('../image/common/select-down-icon-gray.svg');
-  background-size: .4rem .4rem ;
-  background-position: 90% 55%;
-  background-repeat: no-repeat;
-  }
-}
-
-@media screen and (min-width: 600px) {
-  .birthDay select {
-    padding: 0 1.1rem;
-    margin: .7rem 0 0;
-    font-size: .5rem;
-    height: 2.4rem;
-    line-height: 2.4rem;
-  }
-  .birthDay select {
-    background-size: .4rem .4rem ;
-    background-position: 90% 55%;
+    .privacy-link span {
+      font-size: .6rem;
     }
+    label {
+      display: block;
+    }
+    
 }
+
 
 
